bk_ida/gccida/c0/gen_peephole2_1164
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_peephole2_1164/src/insn-emit.c:14569:30: error: use of undeclared identifier 'machine_mode'
operands[4] = gen_rtx_REG( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), 17); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_peephole2_1164/src/insn-emit.c:14569:45: error: expected expression
operands[4] = gen_rtx_REG( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), 17); 
                                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_peephole2_1164/src/obj/insn-emit.o] Error 1
